ngrok api key 제거

--- a/COLAB_GOLD.ipynb
+++ b/COLAB_GOLD.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": null,
       "metadata": {
         "id": "qxqFzGWFj3P4"
       },
@@ -52,9 +52,9 @@
         "# 전역변수\n",
         "GOOGLE_DRIVE_BASE_PATH='/content/drive/MyDrive/GOLD/gold-style-on-policy-only'\n",
         "TEACHER_MODEL='Qwen/Qwen2.5-3B-Instruct'\n",
-        "STUDENT_MODEL='Qwen/Qwen2.5-3B-Instruct'\n",
-        "CHECKPOINT_STEP=115\n",
-        "NGROK_AUTH_TOKEN='364FZM5orMDoZ6oZA1WrKjKZUZB_6dNhkiihA2p2XQFyx3q7U'\n",
+        "STUDENT_MODEL='Qwen/Qwen2.5-1.5B-Instruct'\n",
+        "CHECKPOINT_STEP=114\n",
+        "NGROK_AUTH_TOKEN=''\n",
         "\n",
         "# 환경변수\n",
         "os.environ[\"NGROK_AUTH_TOKEN\"] = NGROK_AUTH_TOKEN"
